# spinning-cube

./: CMakeLists.txt  README.md
src/: main.cpp
